adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius maiores rerum esse dignissimos error eligendi, quis, impedit voluptates ipsam, quos labore consequuntur exercitationem quo libero placeat necessitatibus pariatur ab dicta?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae officia incidunt neque vel exercitationem ipsam repellendus deserunt cum, beatae nihil, eum molestiae labore, blanditiis rerum reprehenderit temporibus sit accusamus.</p>
 </body>
 </html>
